# quicknote

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: utils.hpp
include/core/: cli.hpp
src/: main.cpp  utils.cpp
src/core/: cli.cpp
